feat: add real-time crawl-progress updates